# TOY-Virtual-Machine

./: CMakeLists.txt  README.md  command.h  controller.cpp  controller.h  dump.txt  gui.cpp  gui.h  main.cpp  toy.cpp  toy.h
.github/workflows/: cmake.yml
